--- a/resources/lang/de/logs.properties
+++ b/resources/lang/de/logs.properties
@@ -1,5 +1,5 @@
-itemExportNotPartOfExportStock      = "Variante übersprungen: Kein Bestand."
-itemExportNotPartOfExportPrice      = "Variante übersprungen: Kein Preis."
+itemExportNotPartOfExportStock      = "Variante übersprungen. Kein Bestand."
+itemExportNotPartOfExportPrice      = "Variante übersprungen. Kein Preis."
 
 writtenLines                        = "Anzahl der geschriebenen Zeilen."
 esDuration                          = "Auslesens der Artikeldaten aus Elastic Search."
